--- a/.travis.yml
+++ b/.travis.yml
@@ -1,14 +1,10 @@
----
 language: ruby
-script: "bundle exec rake validate && bundle exec rake lint && bundle exec rake spec SPEC_OPTS='--format documentation'"
-bundler_args: --without development
-matrix:
-  fast_finish: true
-  include:
-    - rvm: 2.0.0
-      env: PUPPET_VERSION=3.5
-    - rvm: 2.2.3
-      env: PUPPET_VERSION=4.0
-    - rvm: 2.3.0
-      env: PUPPET_VERSION=4.4
-sudo: false
+rvm: 2.1.9
+notifications:
+        email:
+                - icalvete@gmail.com
+env:
+        - PUPPET_VERSION=3.8.5
+script: ./script/cibuild
+before_script:
+ - chmod +x ./script/cibuild
